--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,18 +1,18 @@
-<div>
-  <h1>掲示板</h1>
-  <ol>
-    <% @topics.each do |topic| %>
-      <li><%= link_to topic.title, topic_path(topic) %></li>
-    <% end %>
-  </ol>
-  <h2>スレッドを立てる(エラーメッセージ表示は後で)</h2>
-  <%= form_with scope: :topic, url: topics_path, local: true do |form| %>
-    <%= form.label :title, 'タイトル' %><br>
-    <%= form.text_field :title %><br>
-    <%= form.label :name, '名前' %><br>
-    <%= form.text_field :name %><br>
-    <%= form.label :content, '本文' %><br>
-    <%= form.text_area :content, rows: 10, cols: 30 %><br>
-    <%= form.submit 'スレッドを立てる' %>
+<ol>
+  <% @topics.each do |topic| %>
+    <li>
+      <%= link_to topic.title, topic_path(topic) %><br>
+      <a href="#">削除</a>
+    </li>
   <% end %>
-</div>
+</ol>
+<h2>スレッドを立てる(エラーメッセージ表示は後で)</h2>
+<%= form_with scope: :topic, url: topics_path, local: true do |form| %>
+  <%= form.label :title, 'タイトル' %><br>
+  <%= form.text_field :title %><br>
+  <%= form.label :name, '名前' %><br>
+  <%= form.text_field :name %><br>
+  <%= form.label :content, '本文' %><br>
+  <%= form.text_area :content, rows: 10, cols: 30 %><br>
+  <%= form.submit 'スレッドを立てる' %>
+<% end %>
