--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,6 @@
     <% end %>
     <h1><%= link_to '掲示板', root_path %></h1>
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
