--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,20 +1,23 @@
-<h3>スレッドタイトル</h3>
 <h3><%= @topic.title %></h3>
 <ol>
   <% @topic.comments.each do |comment| %>
     <li>
       <%= comment.name %> :<%= comment.updated_at %><br>
       <%= comment.content %><br>
-      <% #TODO なぜ削除の用のlink_toに配列で渡すのか分からないので理解する %>
-      <%= link_to '削除', [comment.topic, comment], method: :delete, data: { confirm: 'コメントを削除してよろしいですか'} %>
+      <% #TODO なぜ削除用のlink_toに配列で渡すのか分からないので理解する %>
+      <%= link_to '削除', [comment.topic, comment], method: :delete, data: { confirm: 'コメントを削除してよろしいですか'}, class: "text-danger" %>
     </li>
   <% end %>
 </ol>
-<h2>コメントする</h2>
-<%= form_with(model: [ @topic, @topic.comments.build ], local: true) do |form| %>
-  <%= form.label :name, '名前' %><br>
-  <%= form.text_field :name %><br>
-  <%= form.label :content, '本文' %><br>
-  <%= form.text_area :content %><br>
-  <%= form.submit 'スレッドに書き込む' %>
-<% end %>
+<div class="border-top border-dark pt-4 pb-4">
+  <h2>コメントする</h2>
+</div>
+<div class="form-group">
+  <%= form_with(model: [ @topic, @topic.comments.build ], local: true) do |form| %>
+    <%= form.label :name, '名前' %><br>
+    <%= form.text_field :name, class: "form-control" %><br>
+    <%= form.label :content, '本文' %><br>
+    <%= form.text_area :content, class: "form-control" %><br>
+    <%= form.submit 'スレッドに書き込む', class: "btn btn-primary" %>
+  <% end %>
+</div>
