--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,18 @@
   </head>
 
   <body>
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, class: name %>
-    <% end %>
-    <h1><%= link_to '掲示板', root_path %></h1>
-    <%= yield %>
+    <header class="bg-dark p-2">
+      <h1 class="ml-3"><%= link_to '掲示板', root_path, class: "text-white" %></h1>
+    </header>
+    <div class="container-fluid p-4 pt-2 text-dark bg-white">
+      <h3 class="text-primary text-center">Let's comment!</h3>
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, class: name %>
+      <% end %>
+      <div class="p-4 h5">
+        <%= yield %>
+      </div>
+    </div>
     <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
