--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,12 +1,12 @@
 <h3><%= @topic.title %></h3>
 <% #TODO ol、liタグからdivかsectionタグに変更する。idの番号で表示するようにしたいから %>
 <div>
-  <% @comments.each_with_index do |comment, idx| %>
+  <% @comments.each do |comment| %>
     <div>
       <% #コメントのidの数字を表示するとComment全体で数えたid番号が表示されてしまう %>
       <% #どうにかして関連付けられたTopicで数えたときのid番号(1から始まる)を表示させたい %>
       <% #each_with_indexで体裁は整えたが根本的な解決にはまだ遠い(ページネーションの挙動が、ページごとに1から表示になってしまう) %>
-      <%= idx + 1 %> : <%= comment.name %> :<%= comment.updated_at %><br>
+      <%= comment.reid %> : <%= comment.name %> :<%= comment.updated_at %><br>
       <%= comment.content %><br>
       <% #TODO なぜ削除用のlink_toに配列で渡すのか分からないので理解する %>
       <% #多分、Commentに対応するTopicとCommentそのものを両方渡す必要があるからかも %>
