--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,13 +1,10 @@
 <h3><%= @topic.title %></h3>
-<% #TODO ol、liタグからdivかsectionタグに変更する。idの番号で表示するようにしたいから %>
 <div>
   <% @comments.each do |comment| %>
     <div class="mb-1">
-      <% #コメントのidの数字を表示するとComment全体で数えたid番号が表示されてしまう %>
-      <% #どうにかして関連付けられたTopicで数えたときのid番号(1から始まる)を表示させたい %>
-      <% #each_with_indexで体裁は整えたが根本的な解決にはまだ遠い(ページネーションの挙動が、ページごとに1から表示になってしまう) %>
       <%= comment.reid %> : <%= comment.name %> :<%= comment.updated_at %><br>
-      <% # 返信の場合,ここにレスアンカーのリンクを表示させる。クリックすると返信先のコメントを個別に表示 %>
+      <%# コメント内にレスアンカーがあれば返信先のコメントのリンクに変換する %>
+      <%# gsubでやったほうが効率的だと思うが、link_toを変換する方法が分からない %>
       <% regex = />>\d+/ %>
       <% if comment.content.match(regex) %>
         <%# コメントからアンカーを切り取って変数に入れ、リンクの文章にする %>
@@ -23,11 +20,16 @@
       <% #多分、Commentに対応するTopicとCommentそのものを両方渡す必要があるからかも %>
       <% #comment.topicとcommentを入れ替えるとsyntaxエラーが出るのは親であるTopicを先に渡していないから? %>
       <% #検証でソースコードを確認すると「href="/topics/31/comments/22"」と出る。何となくは理解できた気がするがはっきりしない %>
-      <%= link_to '削除', [comment.topic, comment], method: :delete, data: { confirm: 'コメントを削除してよろしいですか'}, class: "text-danger" %>
+      <% #下のupdate(削除)のメソッドはpatchでもputでも動いた %>
+      <%= link_to '削除', [comment.topic, comment], method: :patch, data: { confirm: 'コメントを削除してよろしいですか'}, class: "text-danger" %>
+      <%# link_to '消去', [comment.topic, comment], method: :delete, data: { confirm: 'コメントを消去してよろしいですか'}, class: "text-danger" %>
     </div>
   <% end %>
-  <%= will_paginate @comments %>
 </div>
+<div>
+  <%= will_paginate(@comments, renderer: WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'mt-4') %>
+</div>
+
 <div class="border-top border-dark pt-4 pb-4">
   <h2>コメントする</h2>
 </div>
