--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,11 @@
     <nav class="navbar navbar-dark bg-dark p-2">
       <h1 class="ml-3"><%= link_to '掲示板', root_path, class: "text-white" %></h1>
       <% if current_user %>
-        <%= link_to "ユーザー情報編集", '#', class: "nav-link" %>
+        <%= link_to "自分のユーザー情報", admin_user_path(current_user), class: "nav-link" %>
         <%= link_to "ログアウト", logout_path, method: :delete, class: "nav-link" %>
+        <%= link_to "ユーザー一覧", admin_users_path, class: "nav-link" %>
       <% else %>
-        <%= link_to "新規登録", "#", class: "nav-link" %>
+        <%= link_to "新規登録", new_admin_user_path, class: "nav-link" %>
         <%= link_to "ログイン", login_path, class: "nav-link" %>
       <% end %>
     </nav>
